--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "uniwebsite",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.7-6",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "admin-lte": "3.1.0",
     "bootstrap": "^5.1.3",
+    "fix": "0.0.6",
     "jquery": "^3.6.0",
+    "jquery-ui-dist": "^1.13.2",
+    "jquery-ui.1.11.1": "^1.11.1",
     "popper.js": "^1.16.1",
+    "them": "0.0.4",
+    "to": "^0.2.9",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
@@ -19,7 +26,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7",
+    "@babel/plugin-proposal-private-property-in-object": "7",
+    "@babel/plugin-transform-private-property-in-object": "7.23.4",
     "webpack-dev-server": "^3"
   }
 }
