--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,6 @@ yarn-debug.log*
 
 # Ignore application configuration
 /config/application.yml
-
+/public/uploads
+/projects/chaos_news
+/projects/websitegiare
